# rs-messenger

./: .gitmodules  Cargo.toml  build.rs
src/: main.rs
src/telegram/: api.rs  client.rs  manager.rs  mod.rs
